test_suite5/ALAN/test_suite/alan-2022-examples/failing/008980_mutation.alan
source O function p(boolean g13 or) begin relax end begin relax end
